sf-hrms/force-app/main/default/objects/Expense_Report__c/fields/Approver__c.field-meta.xml
<CustomField><fullName>Approver__c</fullName><label>Approver</label><type>Lookup</type><referenceTo>Employee__c</referenceTo><relationshipLabel>Expense Approvals</relationshipLabel><relationshipName>Expense_Approvals</relationshipName></CustomField>