sf-hrms/force-app/main/default/objects/Expense_Report__c/fields/Employee__c.field-meta.xml
<CustomField><fullName>Employee__c</fullName><label>Employee</label><type>Lookup</type><referenceTo>Employee__c</referenceTo><relationshipLabel>Expense Reports</relationshipLabel><relationshipName>Expense_Reports</relationshipName></CustomField>