sf-hrms/force-app/main/default/objects/Expense_Report__c/fields/Submitted_On__c.field-meta.xml
<CustomField><fullName>Submitted_On__c</fullName><label>Submitted On</label><type>Date</type></CustomField>