sf-hrms/force-app/main/default/objects/Expense_Report__c/fields/Title__c.field-meta.xml
<CustomField><fullName>Title__c</fullName><label>Title</label><type>Text</type><length>255</length></CustomField>