sf-hrms/force-app/main/default/objects/Expense_Report__c/fields/Total_Amount__c.field-meta.xml
<CustomField><fullName>Total_Amount__c</fullName><label>Total Amount</label><type>Currency</type><precision>18</precision><scale>2</scale></CustomField>